--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^6.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -40,8 +41,7 @@
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
-    "tslint": "5.12.1",
-    "typescript": "^3.2.4"
+    "tslint": "5.12.1"
   },
   "jest": {
     "moduleFileExtensions": [
